# Slicer-SLICSegmentEditorEffect

./: CMakeLists.txt  README.md  SegmentEditorSlic.s4ext
SegmentEditorSlic/: CMakeLists.txt  SegmentEditorSegmentEditorSlic.py
SegmentEditorSlic/SegmentEditorSegmentEditorSlicLib/: SegmentEditorEffect.py  SegmentEditorSlic.ui
referencetEditorEffect/: CMakeLists.txt  SegmentEditorreferencetEditorEffect.py
referencetEditorEffect/SegmentEditorreferencetEditorEffectLib/: __init__.py  reference.py
